# plugger

./: .buildinfo  .env  .env.swarm  .gitignore  Dockerfile  EN SWARM  Makefile  README.md  ROADMAP.txt  diagrams.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.test.yml  docker-compose.yml  example.html  genindex.html  index.html  objects.inv  posibles  requirements.txt  search.html  searchindex.js  sonar-project.properties
.doctrees/: environment.pickle  example.doctree  (+1 more)
app/: .gitignore  create-superuser.sh  entry-dev.sh  entry-prod.sh  pyproject.toml  requirements.txt  setup.cfg  test.sh
app/apps/: utils.py
app/apps/authentication/: config.py  tests.py  urls.py  views.py
app/apps/catalogue/: config.py  plugins.py  services.py  tests.py  urls.py  views.py
app/apps/catalogue/tests/: __init__.py  e2e.py  unit.py
app/apps/home/: config.py  urls.py
app/apps/home/migrations/: 0001_initial.py
app/apps/static/: style.css
app/apps/templates/: catalogue.html  login.html  page-404.html
app/apps/templates/home/: page-403.html
app/authentication/: config.py  urls.py  views.py
app/authentication/tests/: __init__.py  e2e.py  integration.py  unit.py
app/catalogue/: config.py  docker.py  schema.py  services.py  urls.py  views.py
app/catalogue/tests/: __init__.py  e2e.py  integration.py  unit.py
app/core/: catalogue.py  conf.py  docker.py  errors.py  service.py  services.py  settings.py  tests.py  urls.py  utils.py
app/templates/: base.html  catalogue.html  login.html  page-500.html
(+85 files in other folders)
